--- a/Socket_tool/MainWindow.xaml
+++ b/Socket_tool/MainWindow.xaml
@@ -1,47 +1,18 @@
-﻿<Window
-  x:Class="Socket_tool.MainWindow"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:local="clr-namespace:Socket_tool"
-  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  Title="MainWindow"
-  Width="500"
-  Height="650"
-  MinWidth="500"
-  MinHeight="650"
-  MaxWidth="500"
-  MaxHeight="650"
-  Background="{DynamicResource MaterialDesignPaper}"
-  FontFamily="{DynamicResource MaterialDesignFont}"
-  Foreground="#DDE0E0E0"
-  TextElement.FontSize="13"
-  TextElement.FontWeight="Regular"
-  TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-  TextOptions.TextFormattingMode="Ideal"
-  TextOptions.TextRenderingMode="Auto"
-  mc:Ignorable="d">
+﻿<Window x:Class="WpfApplication1.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApplication1"
+        mc:Ignorable="d"
+        Title="MainWindow" Height="350" Width="525">
   <Grid>
-    <Button
-      x:Name="button"
-      Width="75"
-      Margin="50,65,0,0"
-      HorizontalAlignment="Left"
-      VerticalAlignment="Top"
-      materialDesign:ShadowAssist.ShadowDepth="Depth3"
-      Click="button_Click"
-      Content="Button" />
-    <Button
-      x:Name="button1"
-      Width="75"
-      Margin="50,113,0,0"
-      HorizontalAlignment="Left"
-      VerticalAlignment="Top"
-      Click="button1_Click"
-      Content="Button" />
-    <Grid Name="data_exchange" Margin="200,50,10,10" />
-    <Grid Name="client_grid" Margin="10,180,297,10" />
+    <Button Content="Button" HorizontalAlignment="Left" Margin="43,267,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+    <ListBox Name="serverList" HorizontalAlignment="Left" Height="201" Margin="322,32,0,0" VerticalAlignment="Top" Width="146"/>
+    <Button Content="开启" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="43,235,0,0" Width="75" Click="StartServer"></Button>
+    <Button Content="停止" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="43,203,0,0" Width="75" Click="StopServer"/>
+    <TextBox Name="input" HorizontalAlignment="Left" Height="35" Margin="32,25,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
+    <TextBox Name="output" HorizontalAlignment="Left" Height="35" Margin="32,99,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
+    <Button Content="发送" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="219,32,0,0" Width="75" Click="SendMessage"/>
   </Grid>
 </Window>
