--- a/Socket_tool/MainWindow.xaml
+++ b/Socket_tool/MainWindow.xaml
@@ -1,18 +1,24 @@
-﻿<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="Socket_tool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApplication1"
+        xmlns:socketTool="clr-namespace:Socket_tool"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
   <Grid>
-    <Button Content="Button" HorizontalAlignment="Left" Margin="43,267,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-    <ListBox Name="serverList" HorizontalAlignment="Left" Height="201" Margin="322,32,0,0" VerticalAlignment="Top" Width="146"/>
     <Button Content="开启" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="43,235,0,0" Width="75" Click="StartServer"></Button>
     <Button Content="停止" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="43,203,0,0" Width="75" Click="StopServer"/>
-    <TextBox Name="input" HorizontalAlignment="Left" Height="35" Margin="32,25,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
-    <TextBox Name="output" HorizontalAlignment="Left" Height="35" Margin="32,99,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
+    <TextBox Name="Input" HorizontalAlignment="Left" Height="35" Margin="32,25,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
+    <TextBox Name="Output" HorizontalAlignment="Left" Height="35" Margin="32,99,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="171" />
     <Button Content="发送" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="219,32,0,0" Width="75" Click="SendMessage"/>
+    <TreeView Name="ServerTree" HorizontalAlignment="Left" Height="195" Margin="323,32,0,0" VerticalAlignment="Top" Width="186" SelectedItemChanged="ServerTree_SelectedItemChanged" >
+      <TreeView.ItemTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type socketTool:TreeNodeItem}" ItemsSource="{Binding Path=Children}" >
+          <TextBlock VerticalAlignment="Center" Text="{Binding DisplayName}" Foreground="Black" FontSize="14" />
+        </HierarchicalDataTemplate>
+      </TreeView.ItemTemplate>
+
+    </TreeView>
   </Grid>
 </Window>
